# streamdeck-gw2

./: .gitignore  Cargo.toml  falling.csv  flat1.csv  glide_back.csv  glide_forward.csv  glide_log_1756423759127.csv  glide_normal.csv  glide_normal_curve.csv  slope1.csv  slope2.csv  slope3.csv  slope4.csv  stationary.csv  underwater.csv
.githooks/: pre-push
.github/workflows/: build_and_release.yml
icu.veelume.gw2.sdPlugin/: manifest.json
icu.veelume.gw2.sdPlugin/ui/: set_template.html  settings.html
src/: action_handlers.rs  actions.rs  app.rs  bindings.rs  config.rs  logger.rs  main.rs  plugin.rs  plugin_state.rs  topics.rs
src/action_handlers/: set_template.rs  settings.rs
src/actions/: set_template.rs  settings.rs
src/bindings/: default.rs  key_code.rs  key_control.rs  send_keys.rs
src/gw2/: airborne.rs  bindings_adapter.rs  binds.rs  enums.rs  exec_adapter.rs  gw2_api_adapter.rs  mumble.rs  mumble_adapter.rs  shared.rs
src/plugin_state/: mumble.rs  poller.rs  runtime.rs
src_old/: logger.rs  main.rs  plugin.rs
src_old/app/: action.rs  action_manager.rs  context.rs  mod.rs  state.rs  supervisor.rs
src_old/app/actions/: mod.rs  set_template.rs  settings.rs
src_old/core/: events.rs  mod.rs  sd_client.rs
src_old/infra/: bindings_manager.rs  gw2.rs  mod.rs  mumble.rs  mumble_stub.rs  sd_protocol.rs
src_old/infra/bindings/: key_code.rs  mod.rs  send_keys.rs
