[package]
name = "streamdeck-gw2"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
chrono = { version = "0.4.41", features = [
    "alloc",
    "std",
    "clock",
    "now",
    "serde",
] }
constcat = "0.6.1"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
notify = "8.1.0"
num_enum = "0.7.4"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = [
    "http2",
    "default-tls",
    "charset",
    "json",
    "stream",
    "system-proxy",
    "blocking",
] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
urlencoding = "2.1.3"
websocket = "0.27.1"
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
windows-core = "0.61.2"
